<resources>
    <string name ="titulo_cadastroNovoProduto">"Cadastrar Novo Produto"</string>
    <string name="titulo_perfil">Meu Perfil</string>
    <string name="titulo_pedido">Meu Pedido</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="titulo_meusPedidos">Meus Pedidos</string>
    <string name="titulo_Login">Login</string>
    <string name="titulo_recuperarSenha">Recuperar Senha</string>
    <string name="titulo_Destaque">Em Destaque</string>
    <string name="titulo_todosProduto">Todos os Produtos</string>
    <string name="titulo_visaoGeral">Visão Geral da Loja</string>
    <string name="titulo_utimosPedidos">Últimos Pedidos</string>
    <string name="titulo_meuPedido">Meu Pedido</string>
    <string name="titulo_DetalhesPedido">Detalhes do Pedido</string>

    <string name="dica_escolherFoto">Clique no ícone acima para escolher a foto</string>
    <string name="dica_videoSelecionado">Nenhum vídeo selecionado</string>
    <string name="dica_nenhumPedido">Você ainda não fez nenhum pedido.</string>
    <string name="dica_recuperarSenha">Insira seu E-mail de registro. Será enviado um link seguro para criar uma nova senha.</string>
    <string name="dica_pedidoVazio">Seu pedido está vazio.</string>
    <string name="dica_tipoUsuario">Tipo de Usuário</string>

    <string name="text_nomeProduto">Nome Produto</string>
    <string name="text_nomeUsuario">Nome do Usuário</string>
    <string name="text_nomeCliente">Nome Cliente</string>
    <string name="text_exemplo_email">email@cliente.com</string>
    <string name="text_preco">R$ 0,00</string>
    <string name="text_descricao">Descrição</string>
    <string name="text_produtos">Produtos</string>
    <string name="text_faturamento">Faturamento</string>
    <string name="text_visitas">Visitas</string>
    <string name="text_total">Total: </string>
    <string name="text_qtdXvalor">2x R$ 50,00</string>
    <string name="text_subvalor">R$ 100,00</string>
    <string name="text_pedidoId">Pedido #0000</string>
    <string name="text_data">Data: --/--/----</string>
    <string name="text_totalPedido">Total: R$ 0,00</string>


    <string name="hint_nomeProduto">Nome do Produto</string>
    <string name="hint_buscar">Buscar produto...</string>
    <string name="hint_descricao">Descrição do Produto</string>
    <string name="hint_preco">Preço</string>
    <string name="hint_nomeUsuario">Nome Completo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_endereco">Endereço da Loja (Ex: Av. Afonso Pena)</string>
    <string name="hint_corPrincipal">Cor Principal (Ex: #135D66)</string>
    <string name="hint_corSecundaria">Cor Secundária (Ex: #F0F0F0)</string>
    <string name="hint_corFundo">Cor de Fundo (Ex: #FFFFFF)</string>


    <string name="btn_escolherVideo">Escolher Vídeo</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_excluir">Excluir</string>
    <string name="btn_sairConta">Sair da Conta</string>
    <string name="btn_finalizarPedido">Finalizar Pedido</string>
    <string name="btn_tirarFoto">Tirar Foto</string>
    <string name="btn_criarConta">Criar Conta</string>
    <string name="btn_adicionarProduto">Adicionar ao Pedido</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_enviarLink">Enviar Link</string>
    <string name="btn_salvarConfiguracoes">Salvar Configurações</string>
    <string name="btn_historicoPedido">Histórico Pedido</string>

    <string name="pseuBtn_cadastrar">Não tem uma conta? Cadastre-se</string>
    <string name="pseuBtn_convidado">Entrar como Convidado</string>
    <string name="pseuBtn_redefinirSenha">Redefinir Senha</string>
    <string name="pseuBtn_voltar">← Voltar</string>
    <string name="pseuBtn_voltarLogin">Voltar Login</string>


    <string name="senha_regraTamanho">• Pelo menos 8 caracteres</string>
    <string name="senha_regraMaiuscula">• Pelo menos 1 letra maiúscula</string>
    <string name="senha_regraNumero">• Pelo menos 1 número</string>
    <string name="senha_regraEspecial">• Pelo menos 1 caractere especial (@, #, $, etc.)</string>

    <string name="pergunta_tipoUsuario">Como você deseja usar esse App?</string>

    <string name="radio_souCliente">Sou Cliente</string>
    <string name="radio_souLojista">Sou Lojista</string>

    <string name="app_name">VVV - Vitrine Virtual de Vendas</string>
    <string name="texto_visitante">Visitante</string>
    <string name="msg_logout">Sessão encerrada com sucesso</string>
    <string name="pedido_vazio">Seu pedido está vazio.</string>

</resources>